include/lv00/proof.h


typedef struct Proposition Proposition;
typedef struct ProofStep ProofStep;
typedef struct ProofNavigator ProofNavigator;
typedef struct ProofDependency ProofDependency;
typedef struct PropositionEquivalence PropositionEquivalence;
typedef struct BottomDefinition BottomDefinition;
typedef struct LV00Engine LV00Engine; 
typedef enum {
    PROOF_COLOR_GREEN,             
    PROOF_COLOR_BLUE_UNEXPLORED,   
    PROOF_COLOR_BLUE_RESOURCE,     
    PROOF_COLOR_BLUE_OUT_OF_RANGE, 
    PROOF_COLOR_GREEN_VERIFIED,    
    PROOF_COLOR_YELLOW,            
    PROOF_COLOR_ORANGE_ORACLE,     
    PROOF_COLOR_ORANGE_EX_FALSO,   
    PROOF_COLOR_AMBER,             
    PROOF_COLOR_DARK_ORANGE        
} ProofColor;
typedef enum {
    PROPOSITION_ATOMIC,      
    PROPOSITION_CONJUNCTION, 
    PROPOSITION_DISJUNCTION, 
    PROPOSITION_IMPLICATION, 
    PROPOSITION_NEGATION,    
    PROPOSITION_UNIVERSAL,   
    PROPOSITION_EXISTENTIAL, 
    PROPOSITION_BOTTOM       
} PropositionType;
struct Proposition {
    int id;               
    PropositionType type; 
    ProofColor color;     
    char *label;          
    int *input_port_ids;  
    int input_count;      
    int *output_port_ids; 
    int output_count;     
    ConstraintGraph *pattern; 
    int *precondition_region_ids; 
    int precondition_count;       
    int *postcondition_constraint_ids; 
    int postcondition_count;           
    Proposition **sub_props; 
    int sub_prop_count;      
    TypeRegion *prop_type; 
    char *name;        
    char *description; 
};
struct ProofStep {
    int id;             
    ProofStepType type; 
    ProofColor color;   
    int node_id;       
    int constraint_id; 
    int rule_id;       
    int func_block_id; 
    int *merged_node_ids; 
    int merged_count;     
    int retained_node_id; 
    int *dependency_step_ids; 
    int dependency_count;     
    int *dependent_step_ids;  
    int dependent_count;      
    bool is_breakpoint; 
    bool is_completed;  
    char *note;         
    int64_t timestamp; 
};
struct ProofDependency {
    int id;           
    ProofColor color; 
    enum {
        DEP_SOURCE_DIRECT,   
        DEP_SOURCE_LEMMA,    
        DEP_SOURCE_ORACLE,   
        DEP_SOURCE_EX_FALSO, 
        DEP_SOURCE_NUMERIC   
    } source;
    int lemma_id;       
    char *content_hash; 
    char *external_ref; 
    char *numeric_declaration;  
    double LV00_TOLERATED_FLOAT(precision_threshold); 
    ProofDependency **sub_deps; 
    int sub_dep_count;          
};
typedef enum {
    LEMMA_VIEW_EXPANDED, 
    LEMMA_VIEW_COLLAPSED 
} LemmaViewState;
struct ProofNavigator {
    ProofStep **steps; 
    int step_count;    
    int current_step;  
    Proposition *target_prop;      
    ConstraintGraph *construction; 
    ProofDependency *dep_tree; 
    bool is_complete;       
    ProofColor final_color; 
    int *breakpoint_indices; 
    int breakpoint_count;    
    PropositionEquivalence *equivalences; 
    int equivalence_count;                
    int equivalence_capacity;             
    BottomDefinition *bottom_def; 
    int *lemma_view_step_ids;          
    LemmaViewState *lemma_view_states; 
    int lemma_view_count;              
    int lemma_view_capacity;           
    LV00Engine *engine;
    char *strategy_note; 
};
typedef ProofNavigator Proof;
Proposition *proposition_create(int id, PropositionType type);
void proposition_destroy(Proposition *prop);
UnifyStatus proof_unify(const ConstraintGraph *construction, Proposition *proposition, bool normalize_first);
UnifyStatus proof_unify_detailed(const ConstraintGraph *construction, Proposition *proposition, char **out_mismatch_info);
ProofNavigator *proof_navigator_create(Proposition *target, LV00Engine *engine);
void proof_navigator_destroy(ProofNavigator *nav);
bool proof_navigator_next(ProofNavigator *nav);
bool proof_navigator_prev(ProofNavigator *nav);
bool proof_navigator_goto(ProofNavigator *nav, int step_index);
ProofColor proof_navigator_compute_final_color(ProofNavigator *nav);
bool proof_create_ex_falso_block(ConstraintGraph *graph, int *out_block_id);
bool proof_apply_ex_falso(ProofNavigator *nav, ConstraintGraph *bottom_proof, Proposition *target_prop);
typedef struct PropositionEquivalence {
    int prop_a_id;
    int prop_b_id;
    ConstraintGraph *transformation; 
} PropositionEquivalence;
typedef struct BottomDefinition {
    bool has_input_ports; 
    int input_port_count;
    bool allow_explosion; 
} BottomDefinition;