include/lv00/constraint_graph.h


typedef enum {
    GEOM_POINT,         
    GEOM_LINE_SEGMENT,  
    GEOM_REGION,        
    GEOM_PORT,          
    GEOM_FUNCTION_BLOCK 
} GeomType;
typedef enum {
    PORT_INPUT, 
    PORT_OUTPUT 
} PortType;
typedef enum {
    INCIDENCE,    
    BETWEENNESS,  
    INTERSECTION, 
    CONTAINMENT,  
    CONNECTION    
} ConstraintType;
typedef struct GeomNode GeomNode;
typedef struct Constraint Constraint;
typedef struct ConstraintGraph ConstraintGraph;
struct GeomNode {
    int id;
    GeomType type;
    SymbolicCoord **symbolic_coords;
    int coord_count;
    TrustColor trust;
    LightOrangeSubtype lo_subtype;
    char *numeric_assumption_declaration;
    double numeric_precision;
    int namespace_depth;
    int parent_block_id;
    union {
        Port *port; 
        struct {
            GeomNode **boundary_segments; 
            int segment_count;            
        } region;                         
        struct {
            GeomNode **internal_nodes; 
            int *input_port_ids;       
            int *output_port_ids;      
            int internal_node_count;   
            int input_count;           
            int output_count;          
            enum {
                UNVERIFIED,        
                VERIFIED,          
                NON_DETERMINISTIC, 
                PARTIALLY_VERIFIED 
            } determinism_state;   
        } func_block;              
    } data;
};
struct Constraint {
    int id;
    ConstraintType type;
    int *participants;
    int participant_count;
    int template_id;
};
struct ConstraintGraph {
    GeomNode **nodes;
    int node_count;    
    int node_capacity; 
    Constraint **constraints;
    int constraint_count;    
    int constraint_capacity; 
    int next_node_id;       
    int next_constraint_id; 
    GeomNode **node_index;
    int node_index_capacity; 
    Constraint **constraint_index;
    int constraint_index_capacity; 
    char *error_buffer;       
    char *serialize_buffer;   
};
typedef enum {
    ADD_NODE_OK,            
    ADD_NODE_CONFLICT,      
    ADD_NODE_INVALID_REGION 
} AddNodeResult;
typedef enum { ADD_CONSTRAINT_OK, ADD_CONSTRAINT_DUPLICATE, ADD_CONSTRAINT_CONFLICT } AddConstraintResult;
typedef enum { REMOVE_NODE_OK, REMOVE_NODE_NOT_FOUND, REMOVE_NODE_ERROR } RemoveNodeResult;
typedef enum { REMOVE_CONSTRAINT_OK, REMOVE_CONSTRAINT_NOT_FOUND, REMOVE_CONSTRAINT_ERROR } RemoveConstraintResult;
AddNodeResult graph_add_point(ConstraintGraph *graph, SymbolicCoord **coords, int coord_count);
AddNodeResult graph_add_line_segment(ConstraintGraph *graph, int endpoint1_id, int endpoint2_id);
AddNodeResult graph_add_region(ConstraintGraph *graph, const int *boundary_segment_ids, int segment_count);
AddNodeResult graph_add_port(ConstraintGraph *graph, PortType type, int namespace_depth, int parent_block_id);
AddNodeResult graph_add_function_block(ConstraintGraph *graph, const int *internal_node_ids, int internal_count,
                                       const int *input_port_ids, int input_count, const int *output_port_ids, int output_count);
AddConstraintResult graph_add_incidence(ConstraintGraph *graph, int point_id, int line_or_region_id);
AddConstraintResult graph_add_betweenness(ConstraintGraph *graph, int p1_id, int p2_id, int p3_id);
AddConstraintResult graph_add_intersection(ConstraintGraph *graph, int line1_id, int line2_id, int result_point_id);
AddConstraintResult graph_add_containment(ConstraintGraph *graph, int inner_id, int outer_id);
AddConstraintResult graph_add_connection(ConstraintGraph *graph, int src_port_id, int dst_port_id);
RemoveNodeResult graph_remove_node(ConstraintGraph *graph, int node_id);
RemoveConstraintResult graph_remove_constraint(ConstraintGraph *graph, int constraint_index);
int graph_find_constraints_involving(const ConstraintGraph *graph, int node_id, int *out_indices, int max_results);
int graph_detect_redundancy(const ConstraintGraph *graph, ConstraintType type, const int *participants, int n_parts);
int graph_get_node_count(const ConstraintGraph *graph);
int graph_get_constraint_count(const ConstraintGraph *graph);
GeomNode *graph_get_node(const ConstraintGraph *graph, int node_id);
GeomNode *graph_add_node_with_id(ConstraintGraph *graph, int node_id, GeomType type, SymbolicCoord **coords,
                                 int coord_count);
Constraint *graph_add_constraint_with_id(ConstraintGraph *graph, int constraint_id, ConstraintType type,
                                         int *participants, int participant_count);
ConstraintGraph *graph_create(void);
void graph_destroy(ConstraintGraph *graph);
void graph_set_stream_context(StreamContext *ctx);
int *graph_detect_redundant_constraints(const ConstraintGraph *graph, int *out_count);
int **graph_detect_conflicts(const ConstraintGraph *graph, int *out_conflict_count, int **out_conflict_sizes);
bool graph_validate_region_closure(const ConstraintGraph *graph, int region_id);
char *graph_serialize_to_json(const ConstraintGraph *graph);
ConstraintGraph *graph_deserialize_from_json(const char *json);