module/python/lv/_ctypes_binding.py


# 比较两个坐标：返回 0（相等）、负数（a < b）或正数（a > b）
_lib.symbolic_coord_compare.argtypes = [POINTER(_SymbolicCoord), POINTER(_SymbolicCoord)]
_lib.symbolic_coord_compare.restype = c_int

# 判断是否为零
_lib.symbolic_coord_is_zero.argtypes = [POINTER(_SymbolicCoord)]
_lib.symbolic_coord_is_zero.restype = c_bool

# 判断是否为正数（> 0）
_lib.symbolic_coord_is_positive.argtypes = [POINTER(_SymbolicCoord)]
_lib.symbolic_coord_is_positive.restype = c_bool

# 判断是否为负数（< 0）
_lib.symbolic_coord_is_negative.argtypes = [POINTER(_SymbolicCoord)]
_lib.symbolic_coord_is_negative.restype = c_bool

# 取负：-a
_lib.symbolic_coord_negate.argtypes = [POINTER(_SymbolicCoord)]
_lib.symbolic_coord_negate.restype = POINTER(_SymbolicCoord)

# 转换为双精度浮点数（可能丢失精度）
_lib.symbolic_coord_to_double.argtypes = [POINTER(_SymbolicCoord)]
_lib.symbolic_coord_to_double.restype = c_double

# 计算哈希值，用于 dict/set 等哈希容器
_lib.symbolic_coord_hash.argtypes = [POINTER(_SymbolicCoord)]
_lib.symbolic_coord_hash.restype = c_uint64

# ============================================================
# ConstraintGraph 函数签名
# ============================================================
# 以下函数用于创建、管理和查询约束图。
# 约束图是 Lv-00 的核心数据结构——所有几何构造都以图的形式存储，
# 节点表示几何元素（点、线段、区域等），边表示约束关系。

# 创建空约束图
_lib.graph_create.argtypes = []
_lib.graph_create.restype = POINTER(_ConstraintGraph)

# 销毁约束图，释放所有节点和约束的内存
_lib.graph_destroy.argtypes = [POINTER(_ConstraintGraph)]
_lib.graph_destroy.restype = None

# 获取图中的节点总数
_lib.graph_get_node_count.argtypes = [POINTER(_ConstraintGraph)]
_lib.graph_get_node_count.restype = c_int

# 获取图中的约束总数
_lib.graph_get_constraint_count.argtypes = [POINTER(_ConstraintGraph)]
_lib.graph_get_constraint_count.restype = c_int

# 根据节点 ID 获取节点对象（只读），返回 NULL 表示未找到
_lib.graph_get_node.argtypes = [POINTER(_ConstraintGraph), c_int]
_lib.graph_get_node.restype = POINTER(_GeomNode)

# 向图中添加一个点节点，coords 为 pair 坐标数组（x, y）
_lib.graph_add_point.argtypes = [POINTER(_ConstraintGraph), POINTER(POINTER(_SymbolicCoord)), c_int]
_lib.graph_add_point.restype = c_int

# 添加线段节点，由两个已有点 ID 定义
_lib.graph_add_line_segment.argtypes = [POINTER(_ConstraintGraph), c_int, c_int]
_lib.graph_add_line_segment.restype = c_int

# 添加区域节点，由边界线段 ID 列表定义
_lib.graph_add_region.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int), c_int]
_lib.graph_add_region.restype = c_int

# 添加端口节点，用于函数块系统的输入/输出接口
_lib.graph_add_port.argtypes = [POINTER(_ConstraintGraph), c_int, c_int, c_int]
_lib.graph_add_port.restype = c_int

# 添加函数块节点，定义可重用的几何构造模板
_lib.graph_add_function_block.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int), c_int, POINTER(c_int), c_int, POINTER(c_int), c_int]
_lib.graph_add_function_block.restype = c_int

# 添加关联约束：点位于线段或区域上
_lib.graph_add_incidence.argtypes = [POINTER(_ConstraintGraph), c_int, c_int]
_lib.graph_add_incidence.restype = c_int

# 添加介子约束：三点共线且中间点在两端点之间
_lib.graph_add_betweenness.argtypes = [POINTER(_ConstraintGraph), c_int, c_int, c_int]
_lib.graph_add_betweenness.restype = c_int

# 添加交点约束：两条线段交于一点
_lib.graph_add_intersection.argtypes = [POINTER(_ConstraintGraph), c_int, c_int, c_int]
_lib.graph_add_intersection.restype = c_int

# 添加包含约束：一个区域包含在另一个区域内
_lib.graph_add_containment.argtypes = [POINTER(_ConstraintGraph), c_int, c_int]
_lib.graph_add_containment.restype = c_int

# 添加连接约束：端口之间的数据流连接
_lib.graph_add_connection.argtypes = [POINTER(_ConstraintGraph), c_int, c_int]
_lib.graph_add_connection.restype = c_int

# 从图中移除指定 ID 的节点及其关联约束
_lib.graph_remove_node.argtypes = [POINTER(_ConstraintGraph), c_int]
_lib.graph_remove_node.restype = c_int

# 从图中移除指定 ID 的约束
_lib.graph_remove_constraint.argtypes = [POINTER(_ConstraintGraph), c_int]
_lib.graph_remove_constraint.restype = c_int

# 规范化约束图：合并等价节点、消除冗余约束
_lib.graph_normalize.argtypes = [POINTER(_ConstraintGraph), c_bool]
_lib.graph_normalize.restype = POINTER(_NormalizationResult)

# 检测冗余约束：返回可以安全移除的约束 ID 列表
_lib.graph_detect_redundant_constraints.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int)]
_lib.graph_detect_redundant_constraints.restype = POINTER(c_int)

# 检测冲突约束组：返回互相冲突的约束集合
_lib.graph_detect_conflicts.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int), POINTER(POINTER(c_int))]
_lib.graph_detect_conflicts.restype = POINTER(POINTER(c_int))

# 验证区域的闭合性：检查边界线段是否构成闭合环
_lib.graph_validate_region_closure.argtypes = [POINTER(_ConstraintGraph), c_int]
_lib.graph_validate_region_closure.restype = c_bool

# 带指定ID添加节点（用于反序列化）
_lib.graph_add_node_with_id.argtypes = [POINTER(_ConstraintGraph), c_int, c_int, POINTER(POINTER(_SymbolicCoord)), c_int]
_lib.graph_add_node_with_id.restype = POINTER(_GeomNode)

# 带指定ID添加约束（用于反序列化）
_lib.graph_add_constraint_with_id.argtypes = [POINTER(_ConstraintGraph), c_int, c_int, POINTER(c_int), c_int]
_lib.graph_add_constraint_with_id.restype = POINTER(_Constraint)

# 设置全局流式上下文
_lib.graph_set_stream_context.argtypes = [c_void_p]
_lib.graph_set_stream_context.restype = None

# 查找涉及指定节点的所有约束
_lib.graph_find_constraints_involving.argtypes = [POINTER(_ConstraintGraph), c_int, POINTER(c_int), c_int]
_lib.graph_find_constraints_involving.restype = c_int

# 序列化图为 JSON 字符串
_lib.graph_serialize_to_json.argtypes = [POINTER(_ConstraintGraph)]
_lib.graph_serialize_to_json.restype = c_void_p

# 从 JSON 字符串反序列化图
_lib.graph_deserialize_from_json.argtypes = [c_char_p]
_lib.graph_deserialize_from_json.restype = POINTER(_ConstraintGraph)

# 检测冗余（按类型和参与者）
_lib.graph_detect_redundancy.argtypes = [POINTER(_ConstraintGraph), c_int, POINTER(c_int), c_int]
_lib.graph_detect_redundancy.restype = c_int

# ============================================================
# NormalizationResult 函数签名
# ============================================================
# 规范化结果的生命周期管理函数。
# NormalizationResult 由 graph_normalize() 创建，
# 使用完毕后必须调用 normalization_result_destroy() 释放。

_lib.normalization_result_destroy.argtypes = [POINTER(_NormalizationResult)]
_lib.normalization_result_destroy.restype = None

# ============================================================
# FuncBlock 函数签名
# ============================================================
# 函数块（FuncBlock）是 Lv-00 的可重用几何构造模板系统。
# 支持打包（pack）、实例化（instantiate）和确定性检查（determinism check）。
# 选择器（Selector）用于在多解情况下选择唯一解。

_lib.func_block_create.argtypes = [c_int]
_lib.func_block_create.restype = POINTER(_FuncBlock)

_lib.func_block_destroy.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_destroy.restype = None

_lib.func_block_pack.argtypes = [
    POINTER(_ConstraintGraph),
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(POINTER(_FuncBlock))
]
_lib.func_block_pack.restype = c_int

_lib.func_block_instantiate.argtypes = [
    POINTER(_FuncBlock),
    POINTER(_ConstraintGraph),
    POINTER(c_int), c_int,
    POINTER(POINTER(c_int)), POINTER(c_int)
]
_lib.func_block_instantiate.restype = c_int

_lib.func_block_determinism_check_static.argtypes = [POINTER(_FuncBlock), POINTER(_ConstraintGraph)]
_lib.func_block_determinism_check_static.restype = c_int

_lib.func_block_determinism_check_dynamic.argtypes = [POINTER(_FuncBlock), POINTER(_ConstraintGraph), POINTER(POINTER(_SymbolicCoord)), c_int]
_lib.func_block_determinism_check_dynamic.restype = c_int

_lib.func_block_verify_determinism.argtypes = [POINTER(_FuncBlock), POINTER(_ConstraintGraph), c_int]
_lib.func_block_verify_determinism.restype = c_int

# FuncBlock Getter 函数
_lib.func_block_get_input_count.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_get_input_count.restype = c_int

_lib.func_block_get_output_count.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_get_output_count.restype = c_int

_lib.func_block_get_internal_count.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_get_internal_count.restype = c_int

_lib.func_block_get_id.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_get_id.restype = c_int

_lib.func_block_get_determinism.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_get_determinism.restype = c_int

_lib.func_block_get_name.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_get_name.restype = c_char_p

_lib.func_block_get_description.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_get_description.restype = c_char_p

# FuncBlock Setter 函数
_lib.func_block_set_internal_nodes.argtypes = [POINTER(_FuncBlock), POINTER(c_int), c_int]
_lib.func_block_set_internal_nodes.restype = c_bool

_lib.func_block_set_input_ports.argtypes = [POINTER(_FuncBlock), POINTER(c_int), c_int]
_lib.func_block_set_input_ports.restype = c_bool

_lib.func_block_set_output_ports.argtypes = [POINTER(_FuncBlock), POINTER(c_int), c_int]
_lib.func_block_set_output_ports.restype = c_bool

_lib.func_block_set_selector.argtypes = [POINTER(_FuncBlock), c_void_p]
_lib.func_block_set_selector.restype = c_bool

_lib.func_block_add_port_dependency.argtypes = [POINTER(_FuncBlock), c_void_p]
_lib.func_block_add_port_dependency.restype = c_bool

_lib.func_block_set_preconditions.argtypes = [POINTER(_FuncBlock), POINTER(c_int), c_int]
_lib.func_block_set_preconditions.restype = c_bool

_lib.func_block_set_name.argtypes = [POINTER(_FuncBlock), c_char_p]
_lib.func_block_set_name.restype = c_bool

_lib.func_block_set_description.argtypes = [POINTER(_FuncBlock), c_char_p]
_lib.func_block_set_description.restype = c_bool

# 深拷贝函数块
_lib.func_block_copy.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_copy.restype = POINTER(_FuncBlock)

# 检测跨边界约束
_lib.func_block_detect_cross_boundary.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int), c_int, POINTER(c_void_p), POINTER(c_int)]
_lib.func_block_detect_cross_boundary.restype = c_bool

# 打包操作（扩展版）
_lib.func_block_pack_ex.argtypes = [POINTER(_ConstraintGraph), c_void_p, POINTER(POINTER(_FuncBlock))]
_lib.func_block_pack_ex.restype = c_int

# 选择器相关
_lib.selector_create.argtypes = [c_int]
_lib.selector_create.restype = c_void_p

_lib.selector_create_with_reference.argtypes = [c_int, c_int]
_lib.selector_create_with_reference.restype = c_void_p

_lib.selector_destroy.argtypes = [c_void_p]
_lib.selector_destroy.restype = None

_lib.selector_apply.argtypes = [c_void_p, POINTER(POINTER(_GeomNode)), c_int, POINTER(c_int)]
_lib.selector_apply.restype = c_bool

# ============================================================
# Proof 函数签名
# ============================================================
# 证明系统相关函数，包括命题创建、合一检查、证明导航和导出。
# 证明导航器（ProofNavigator）支持遍历证明树并导出为 HTML/LaTeX 格式。

_lib.proposition_create.argtypes = [c_int, c_int]
_lib.proposition_create.restype = POINTER(_Proposition)

_lib.proposition_destroy.argtypes = [POINTER(_Proposition)]
_lib.proposition_destroy.restype = None

_lib.proof_navigator_create.argtypes = [POINTER(_Proposition)]
_lib.proof_navigator_create.restype = POINTER(_ProofNavigator)

_lib.proof_navigator_destroy.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_destroy.restype = None

_lib.proof_unify.argtypes = [POINTER(_ConstraintGraph), POINTER(_Proposition), c_bool]
_lib.proof_unify.restype = c_int

# proof_unify_detailed: 带详细失败原因报告的合一检查
# C 函数签名: proof_unify_detailed(ConstraintGraph*, Proposition*, bool, char**) -> int
# 第四个参数为输出参数，接收 C 引擎分配的诊断字符串指针
_lib.proof_unify_detailed.argtypes = [POINTER(_ConstraintGraph), POINTER(_Proposition), c_bool, POINTER(c_char_p)]
_lib.proof_unify_detailed.restype = c_int

_lib.proof_create_ex_falso_block.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int)]
_lib.proof_create_ex_falso_block.restype = c_bool

_lib.proof_apply_ex_falso.argtypes = [POINTER(_ProofNavigator), POINTER(_ConstraintGraph), POINTER(_Proposition)]
_lib.proof_apply_ex_falso.restype = c_bool

_lib.proof_navigator_next.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_next.restype = c_bool

_lib.proof_navigator_prev.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_prev.restype = c_bool

_lib.proof_navigator_goto.argtypes = [POINTER(_ProofNavigator), c_int]
_lib.proof_navigator_goto.restype = c_bool

_lib.proof_navigator_compute_final_color.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_compute_final_color.restype = c_int
